# enigma

./: .gitignore  README.md  co.tauos.Enigma.Devel.json  co.tauos.Enigma.json  com.fyralabs.Enigma.Devel.json  com.fyralabs.Enigma.json  enigma.spec  meson.build  meson_options.txt
.github/workflows/: deploy.yml  package.yml
_build/: .ninja_deps  .ninja_log  build.ninja  co.tauos.Enigma  compile_commands.json  config.h
_build/co.tauos.Enigma.p/src/: app.c  prefs.c  settings.c  utils.c  window.c
_build/data/: asresources.c  co.tauos.Enigma.desktop  co.tauos.Enigma.desktop.in  co.tauos.Enigma.metainfo.xml  co.tauos.Enigma.metainfo.xml.in
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
data/: co.tauos.Enigma,gresource.xml  co.tauos.Enigma,gresources.xml  co.tauos.Enigma.desktop.in  co.tauos.Enigma.gresources.xml  co.tauos.Enigma.gschema.xml  co.tauos.Enigma.metainfo.xml.in  com.fyralabs.Enigma.gresources.xml  com.fyralabs.Enigma.gschema.xml  com.fyralabs.Enigma.metainfo.xml.in  meson.build  style-dark.css  style.css
data/icons/: meson.build
data/ui/: contentview.ui  docrow.ui  docrowcontent.ui  main_window.blp  main_window.ui  menu.blp  menu.ui  meson.build  prefs.blp  prefs.ui  sidebar.ui
po/: LINGUAS  POTFILES  README.md  ar.po  co.tauos.Enigma.pot  cs.po  de.po  en_OWO.po  en_owo.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  th.po  tr.po  vi.po  yue.po  zh_Hans.po  zh_Hant.po
src/: Application.vala  MainWindow.vala  app.vala  config.vapi  meson.build  prefs.vala  settings.vala  utils.vala  window.vala
src/Models/: Doc.vala
src/Repositories/: DocRepository.vala
src/Services/: SettingsManager.vala
src/Utils/: FileUtils.vala  MiscUtils.vala  ObservableList.vala  Sorter.vala  ThreadUtils.vala
src/ViewModels/: DocViewModel.vala
src/Views/: ContentView.vala  Sidebar.vala  View.vala
src/Widgets/: DocRowContent.vala  PreferencesWindow.vala
